--- a/ts/package.json
+++ b/ts/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ali/fc-util",
-  "version": "1.6.1",
+  "name": "@alicloud/fc-util",
+  "version": "1.0.0",
   "description": "",
   "main": "dist/client.js",
   "scripts": {
@@ -11,7 +11,7 @@
     "prepublishOnly": "tsc"
   },
   "author": "Jackson Tian",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "devDependencies": {
     "@types/mocha": "^7.0.1",
     "@types/node": "^12.12.26",
