--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ jobs:
     - language: go
       go: 1.12.x
       env: TEA_UTIL_ENV="go"
+      install: 
+        - export GO111MODULE=on
     - language: node_js
       node_js: 12
       env: TEA_UTIL_ENV="ts"
